glx: In DrawableGone, only clear context tags when we are also deleting the context

In DrawableGone, don't clear tags for context which has idExists set
The client hasn't deleted them yet and may still refer to the tag

https://bugs.freedesktop.org/show_bug.cgi?id=30089

Signed-off-by: Jon TURNEY <jon.turney@dronecode.org.uk>