glx/glxext.c
@@ -147,7 +147,8 @@ static Bool DrawableGone(__GLXdrawable *glxPriv, XID xid)
 	    if (c == __glXLastContext)
 		__glXFlushContextCache();
 
-	    for (i = 1; i < currentMaxClients; i++) {
+	    if (!c->idExists) {
+              for (i = 1; i < currentMaxClients; i++) {
 		if (clients[i]) {
 		    __GLXclientState *cl = glxGetClient(clients[i]);
 
@@ -160,6 +161,7 @@ static Bool DrawableGone(__GLXdrawable *glxPriv, XID xid)
 			}
 		    }
 		}
+              }
 	    }
 	}
 	if (c->drawPriv == glxPriv)
